<resources>
    <string name="cashregister_app_name">收银机</string>
    <string name="cashregister_test_btn">测试语言</string>
    <string name="cashregister_download_btn">测试下载</string>
    <string name="cashregister_input_e_number">请输入工号</string>
    <string name="cashregister_input_e_psw">请输入密码</string>
    <string name="cashregister_cash_login">登录</string>
    <string name="cashregister_cash_empty_psw">请输入密码</string>
    <string name="cashregister_cash_empty_name">请输入工号</string>
    <string name="cashregister_table">桌台</string>
    <string name="cashregister_orders">订单</string>
    <string name="cashregister_menbers">会员</string>
    <string name="cashregister_book_off">交班</string>
    <string name="cashregister_print">打印</string>
    <string name="cashregister_setting">设置</string>
    <string name="cashregister_exit">退出</string>
    <string name="cashregister_menbers_recharge_detail">会员储值明细</string>
    <string name="cashregister_consumes_detail">会员消费明细</string>
    <string name="cashregister_menbers_setting">会员权益设置</string>
    <string name="cashregister_menber_detail_title">会员详情</string>
    <string name="cashregister_recharge_fragment_search_tv">搜索：</string>
    <string name="cashregister_recharge_time">充值时间：</string>
    <string name="cashregister_today">今天</string>
    <string name="cashregister_yesterday">昨天</string>
    <string name="cashregister_last_seven_days">最近7天</string>
    <string name="cashregister_search">搜索</string>
    <string name="cashregister_clean">清空</string>
    <string name="cashregister_total_num_tv">查询到 5 笔记录</string>
    <string name="cashregister_rechare_vlaue">储值金额</string>
    <string name="cashregister_rechare_real_money">储值实收</string>
    <string name="cashregister_rechare_pre">储值赠送</string>
    <string name="cashregister_consume_receivable">应收金额</string>
    <string name="cashregister_consume_not_recharge_money">非储值实收</string>
    <string name="cashregister_consume_recharge_money">储值实收</string>
    <string name="cashregister_consume_recharge_give">储值赠送</string>
    <string name="cashregister_member_grouth_num">成长值</string>
    <string name="cashregister_integral_balance">积分余额</string>
    <string name="cashregister_stored_value_balance">储值余额</string>
    <string name="cashregister_membership_assignment">会员归属</string>
    <string name="cashregister_member_status">状态</string>
    <string name="cashregister_recharge">充值</string>
    <string name="cashregister_member_name">姓名</string>
    <string name="cashregister_member_birthday">生日</string>
    <string name="cashregister_creat_card_time">开卡时间</string>
    <string name="cashregister_consume_num">消费次数</string>
    <string name="cashregister_consume_amount">累计消费金额</string>
    <string name="cashregister_last_cosume_time">最近消费时间</string>
    <string name="cashregister_update_member">修改会员资料</string>
    <string name="cashregister_report">挂失/冻结</string>
    <string name="cashregister_refund">退款</string>
    <string name="cashregister_card_replacement">换卡</string>
    <string name="cashregister_cancellation">注销</string>
    <string name="cashregister_coupons_available">可用优惠券(%s)</string>
    <string name="cashregister_add_card_title">会员制卡</string>
    <string name="cashregister_card_range">卡号范围</string>
    <string name="cashregister_card_num">卡号</string>
    <string name="cashregister_make_card">制卡(只能制未绑定的卡)</string>
    <string name="cashregister_moblie_phone">手机号码</string>
    <string name="cashregister_new_member">新增会员</string>

</resources>
