<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cashregister_cash_login_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@id/cashregister_cash_login_logo_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/cashregister_login_margin_top"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@id/cashregister_logo_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/cashregister_home_pic_logo" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cashregister_logo_img"
            android:layout_marginTop="@dimen/cashregister_splash_center"
            android:src="@mipmap/cashregister_home_pic_name" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatEditText
        android:id="@id/cashregister_cash_login_num_edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cashregister_login_edite_hight"
        android:layout_marginLeft="@dimen/cashregister_login_margin_left"
        android:layout_marginTop="@dimen/cashregister_login_edite_marginTop"
        android:layout_marginRight="@dimen/cashregister_login_margin_left"
        android:textSize="@dimen/cashregister_login_edite_size"
        android:hint="@string/cashregister_input_e_number"
        android:paddingLeft="20dp"
        android:textColor="@color/cashregister_white"
        android:textColorHint="@color/cashregister_white"
        android:background="@drawable/cashregister_cash_login_bg" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@id/cashregister_cash_login_psw_edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cashregister_login_edite_hight"
        android:layout_marginLeft="@dimen/cashregister_login_margin_left"
        android:layout_marginTop="@dimen/cashregister_login_edite_marginTop"
        android:layout_marginRight="@dimen/cashregister_login_margin_left"
        android:textSize="@dimen/cashregister_login_edite_size"
        android:hint="@string/cashregister_input_e_psw"
        android:paddingLeft="20dp"
        android:textColor="@color/cashregister_white"
        android:textColorHint="@color/cashregister_white"
        android:background="@drawable/cashregister_cash_login_bg" />

    <TextView
        android:id="@id/cashregister_cash_login_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cashregister_login_edite_hight"
        android:layout_marginLeft="@dimen/cashregister_login_margin_left"
        android:layout_marginTop="@dimen/cashregister_login_edite_marginTop"
        android:layout_marginRight="@dimen/cashregister_login_margin_left"
        android:background="@drawable/cashregister_cash_login_btn_bg"
        android:textColor="@color/cashregister_white"
        android:text="@string/cashregister_cash_login"
        android:gravity="center"
        android:textSize="@dimen/cashregister_cash_login_btn_size"/>

</LinearLayout>