<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7DDE4"
    android:orientation="vertical">

    <LinearLayout
        android:id="@id/cashregister_add_card_back_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cashregister_white"
        android:orientation="horizontal"
        android:paddingTop="@dimen/cashregister_member_main_top">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/cashregister_margin_10dp"
            android:layout_marginBottom="@dimen/cashregister_member_detail_bottom"
            android:src="@mipmap/cashregister_btn_back" />

        <TextView
            android:id="@id/cashregister_member_ditail_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/cashregister_margin_20dp"
            android:layout_marginBottom="@dimen/cashregister_member_detail_bottom"
            android:text="@string/cashregister_add_card_title"
            android:textColor="@color/cashregister_member_detail_title_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/cashregister_margin_20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cashregister_white"
            android:orientation="horizontal"
            android:padding="@dimen/cashregister_margin_20dp">

            <RadioGroup
                android:id="@id/cashregister_radioGroup_sex_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@id/cashregister_card_range_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/cashregister_card_range"
                    android:textColor="@color/cashregister_radio_btn_text_color" />

                <RadioButton
                    android:id="@id/cashregister_card_num_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/cashregister_margin_40dp"
                    android:text="@string/cashregister_card_num"
                    android:textColor="@color/cashregister_radio_btn_text_color" />
            </RadioGroup>

            <com.xgsb.cashregister.wedgit.ClearableEditTextWithIcon
                android:id="@id/cashregister_card_num_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginRight="@dimen/cashregister_margin_40dp"
                android:layout_weight="1"
                android:background="@drawable/cashregister_member_search_edit_bg"
                android:ellipsize="end"
                android:hint="请刷卡录入卡号"
                android:imeOptions="actionSearch"
                android:inputType="number"
                android:paddingLeft="@dimen/cashregister_margin_10dp"
                android:paddingTop="@dimen/cashregister_member_edite_padding_top"
                android:paddingBottom="@dimen/cashregister_member_edite_padding_top"
                android:textSize="@dimen/cashregister_menber_edit_text_size" />

            <LinearLayout
                android:id="@id/cashregister_mult_make_cards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:visibility="invisible">

                <TextView
                    android:id="@id/cashregister_make_card_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="制卡数量：" />

                <com.xgsb.cashregister.wedgit.ClearableEditTextWithIcon
                    android:id="@id/cashregister_card_num_edite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/cashregister_margin_10dp"
                    android:background="@drawable/cashregister_member_search_edit_bg"
                    android:ellipsize="end"
                    android:hint="请输入卡的数量"
                    android:imeOptions="actionSearch"
                    android:inputType="number"
                    android:paddingLeft="@dimen/cashregister_margin_10dp"
                    android:paddingTop="@dimen/cashregister_member_edite_padding_top"
                    android:paddingBottom="@dimen/cashregister_member_edite_padding_top"
                    android:textSize="@dimen/cashregister_menber_edit_text_size" />

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/cashregister_margin_40dp"
            android:background="@color/cashregister_white"
            android:orientation="vertical">

            <TextView
                android:id="@id/cashregister_make_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/cashregister_margin_20dp"
                android:background="@drawable/cashregister_make_card_btn_bg"
                android:paddingLeft="@dimen/cashregister_margin_60dp"
                android:paddingTop="@dimen/cashregister_margin_10dp"
                android:paddingRight="@dimen/cashregister_margin_60dp"
                android:paddingBottom="@dimen/cashregister_margin_10dp"
                android:text="@string/cashregister_make_card"
                android:textColor="@color/cashregister_white"
                android:textSize="@dimen/cashregister_member_tabl_text_size" />

            <android.support.v7.widget.RecyclerView
                android:id="@id/cashregister_card_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/cashregister_make_card"
                android:paddingLeft="@dimen/cashregister_margin_20dp"
                android:paddingTop="@dimen/cashregister_margin_20dp"
                android:paddingRight="@dimen/cashregister_margin_20dp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>